# Story2Belief

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.cursor/plans/: operationalize-vars-prototype_b9b1c9f2.plan.md
.cursor/rules/: 00-project-context.mdc  10-python-style.mdc  20-prompt-conventions.mdc  30-data-conventions.mdc  40-research-notebooks.mdc
configs/: default.yaml  narrative_corpus.yaml  narrative_discourse_features.yaml  prototype.yaml  reader_profiles.yaml
configs/instruments/: sentiart_big5_seeds.yaml  swas.yaml
data/: README.md
docs/: 00-vision-and-scope.md  01-three-layer-architecture.md  02-prototype-roadmap-3mo.md  03-three-year-plan.md  04-narrative-pipeline.md  05-reader-pipeline.md  06-bridge-moral-transfer.md  07-swas-adaptation.md  08-narrative-feature-schema.md  09-reader-trait-schema.md  10-dilemma-design.md  11-data-sources.md  12-tools-and-resources.md  13-methodology.md  14-experiments.md  15-risks-and-mitigation.md  16-ethics-and-positionality.md  17-glossary.md  18-validation-plan.md  README.md  references.bib
docs/decisions/: 0001-use-uv.md  0002-use-concordia-for-agents.md  0003-swas-as-self-report-layer.md  0004-prototype-scope-2-texts-50-readers.md
docs/diagrams/: architecture.mmd  pipelines.mmd
docs/references/: README.md
experiments/: README.md
experiments/exp01_narrative_pipeline/: NOTES.md  config.yaml
experiments/exp02_reader_variation/: NOTES.md  config.yaml
experiments/exp03_moral_transfer/: NOTES.md  config.yaml
notebooks/: 01_narrative_pipeline_demo.ipynb  02_reader_cohort_demo.ipynb  03_bridge_demo.ipynb  04_end_to_end_prototype.ipynb  README.md
scripts/: build_reader_cohort.py  compute_transfer_metrics.py  run_dilemma_assessment.py  run_narrative_pipeline.py  run_reading_session.py
src/story2belief/: __init__.py  config.py
src/story2belief/bridge/: __init__.py  dilemmas.py  moral_foundations.py  similarity.py  transfer.py
src/story2belief/llm/: __init__.py  client.py
src/story2belief/narrative/: __init__.py  characters.py  discourse.py  moral_extraction.py  pipeline.py  schema.py  sentiment.py  story_world.py
src/story2belief/prompts/: character_big5.prompt.md  dilemma_response.prompt.md  moral_extraction.examples.py  moral_extraction.prompt.md  narrative_feature_ordinal.prompt.md  narrative_features.examples.py  narrative_features.prompt.md  reader_persona.prompt.md  swas_self_report.prompt.md
src/story2belief/readers/: __init__.py  agent.py  cohort.py  profile.py  reading_loop.py  swas.py
src/story2belief/utils/: __init__.py  io.py  logging.py  seeds.py
src/story2belief/viz/: __init__.py  plots.py
tests/: test_bridge_schemas.py  test_narrative_schema.py  test_reader_profile.py  test_smoke.py
