[project]
name = "story2belief"
version = "0.0.1"
description = "A computational model of narrative persuasion: text features × reader profiles → moral transfer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [
    { name = "Polina Bakhturina" },
]
keywords = [
    "narrative-persuasion",
    "computational-narratology",
    "generative-agents",
    "moral-foundations",
    "story-world-absorption",
]

# Core runtime dependencies. Keep this list small.
# Group-specific deps live in [project.optional-dependencies] below.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Narrative-analysis pipeline (Layer 1).
nlp = [
    "spacy>=3.7",
    # "booknlp",        # add via `uv add` when wired up
    # "sentiart",       # cloned/installed separately, see docs/12-tools-and-resources.md
    "transformers>=4.40",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
]

# AI-reader pipeline (Layer 2).
agents = [
    "openai>=1.30",
    "anthropic>=0.25",
    # "gdm-concordia",  # add via `uv add` when wired up
]

# Visualization / analysis.
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
]

# Developer tooling.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
]

# Top-level CLIs live in scripts/ and are invoked via the Makefile or
# `uv run python scripts/<name>.py`. We deliberately do not expose them as
# `[project.scripts]` console entry points yet -- when the scripts mature,
# they can be moved into `story2belief.cli` and re-exposed here.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/story2belief"]

# ----- Tooling configuration -----

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["src"]

# ----- uv configuration -----

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
]
